[package]
name = "rust_bpmn_analyzer-bindings"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
rust_bpmn_analyzer = { version = "2.0.0", git = "https://github.com/ETolboom/rust_bpmn_analyzer/" }

[lib]
name = "rust_bpmn_analyzer_bindings"
crate-type = ["cdylib"]
